# pdf_parsers

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
parse/: adhocery.py  clean_text.py  fix_page_nos.py  images_to_text.py  ocr_images.py  pdf_to_images.py  pdf_to_xhtml.py  pipeline_gui.py  rename_pdfs.py  slice.py  slices_to_images.py  stitch.py  xhtml_to_text.py
parse/pylib/: const.py  efloras_reader.py  image_transformer.py  log.py  mimosa_base_reader.py  mimosa_marked_reader.py  mimosa_proximity_reader.py  ocr.py  sentence_pipeline.py  slice_box.py  slice_page.py  spin_box.py  text_assembler.py  text_cleaner.py  text_util.py
