[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_parsers"
version = "0.1.0"
readme = "README.md"
description = "Parse PDFs for information extraction"
license = {file = "LICENSE"}
authors = [{name="Raphael LaFrance", email="raphael.lafrance@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "Jinja2",
    "beautifulsoup4",
    "customtkinter",
    "ftfy",
    "lxml",
    "numpy",
    "pillow",
    "pytesseract",
    "regex",
    "rich",
    "scikit-image",
    "scipy",
]
optional-dependencies.dev = [
    "build",
    "pre-commit",
    "pre-commit-hooks",
    "python-lsp-server[all]",
    "ruff",
]

[project.scripts]
clean_text = "parse.clean_text:main"
fix_page_nos = "parse.fix_page_nos:main"
images_to_text = "parse.images_to_text:main"
pdf_to_images = "parse.pdf_to_images:main"
pdf_to_xhtml = "parse.pdf_to_xhtml:main"
rename_pdfs = "parse.rename_pdfs:main"
stitch = "parse.stitch:main"
xhtml_to_text = "parse.xhtml_to_text:main"

[project.gui-scripts]
slice-gui = "parse.slice:main"

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py311"

show-fixes = true

select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "S",
    "BLE",
    "FBT",
    "B",
#    "A",
    "COM",
    "C4",
    "T10",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
#    "ARG",
    "PTH",
    "TD",
    "FIX",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
#    "FURB",
#    "LOG",
    "RUF",
]

ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D212",
    "ISC001",
    "N818",
    "PD901",
    "PLR0913",
    "PLW2901",
    "PLW0603",
    "PT009",
    "RET504",
    "RUF001",
    "SIM114",
    "SIM117",
    "SLF001",
    "T201",
]
